Fixing spacing and adding did modal

--- a/packages/d-space/src/components/listing/ListingContainer.less
+++ b/packages/d-space/src/components/listing/ListingContainer.less
@@ -7,9 +7,9 @@
 .ListingContainer {
   margin-top: 16px;
   width: 100%;
-  max-width: 1400px;
+  max-width: 1608px;
   justify-content: center;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 
   &--title {
     margin-left: 16px;
